<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string
        name="app_name">REST Application</string>
    <string
        name="serverKey">server</string>
    <string
        name="prefsServerTitle">Server</string>
    <string
        name="prefsServerSummary">The server used to gather data.</string>
    <string
        name="prefsServerDefault">132.176.5.108</string>
    <string
        name="portKey">port</string>
    <string
        name="prefsPortTitle">Port</string>
    <string
        name="prefsPortSummary">Server query port</string>
    <string
        name="prefsPortDefault">9998</string>
    <string
        name="cacheTimeKey">cacheTime</string>
    <string
        name="prefsCacheTimeTitle">Cache Time (in minutes)</string>
    <string
        name="prefsCacheTimeSummary">How long to cache the data (in minutes)</string>
    <string
        name="prefsCacheTimeDefault">10</string>
    <string
        name="tasksTitle">Tasks</string>
    <string
        name="descriptionTitle">Description of Task</string>
    <string
        name="usersMenuAdd">Add New User</string>
    <string
        name="usersMenuAddCondensed">Add</string>
    <string
        name="usersMenuRefresh">Refresh Users List</string>
    <string
        name="usersMenuRefreshCondensed">Refresh</string>
    <string
        name="usersMenuPreferences">Preferences</string>
    <string
        name="preferencesTitle">Preferences</string>
    <string
        name="tasksMenuAdd">Add New Task</string>
    <string
        name="tasksMenuAddCondensed">Add</string>
    <string
        name="tasksMenuRefresh">Refresh Tasks List</string>
    <string
        name="tasksMenuRefreshCondensed">Refresh</string>
    <string
        name="tasksMenuSort">Sort</string>
    <string
        name="tasksMenuFilter">Filter</string>
    <string
        name="taskDescriptionMenuEdit">Edit Task Description</string>
    <string
        name="taskDescriptionMenuEditCondensed">Edit</string>
    <string
        name="taskDescriptionMenuRefresh">Refresh Task Description</string>
    <string
        name="taskDescriptionMenuRefreshCondensed">Refresh</string>
    <string
        name="taskDescriptionMenuDelete">Delete Task</string>
    <string
        name="taskDescriptionMenuDeleteCondensed">Delete</string>
    <string
        name="usersActivityContextMenuEdit">Edit User</string>
    <string
        name="usersActivityContextMenuDelete">Delete User</string>
    <string
        name="usersActivityContextMenuDeleteCondensed">Delete</string>
    <string
        name="tasksActivityContextMenuEdit">Edit Task</string>
    <string
        name="tasksActivityContextMenuEditCondensed">Edit</string>
    <string
        name="tasksActivityContextMenuDelete">Delete Task</string>
    <string
        name="tasksActivityContextMenuDeleteCondensed">Delete</string>
    <string name="authUserLinkHint">http://</string>
    <string name="authUserNameHint">Name</string>
    <string name="authPasswordHint">Password</string>
    <string name="authBannerLogIn">Log in to the Task Management System</string>
    <string name="authLoginButtonText">Sign in</string>
    <string name="accountsBanner">Please select an account.</string>
    <string name="accountsMenuLogin">Sign in</string>
    <string name="accountsMenuCreate">Create account</string>
    <string name="authCreateLink"><u>Create account instead.</u></string>
    <string name="tasksMenuAccounts">Accounts</string>
    <string name="newAccountName">Name</string>
    <string name="newAccountHref">http://</string>
    <string name="newAccountPassword">Password</string>
    <string name="newAccountCreate">Create</string>
    <string name="newAccountBanner">Create a new account.</string>
    <string name="durationPickerYears">Years</string>
    <string name="durationPickerMonths">Months</string>
    <string name="durationPickerDays">Days</string>
    <string name="durationPickerHours">Hours</string>
    <string name="durationPickerMinutes">Minutes</string>
    <string name="durationPickerSeconds">Seconds</string>
    <string name="taskProgressTitle">Progress</string>
    <string name="taskDateAdded">Added</string>
    <string name="taskDateModified">Modified</string>
    <string name="taskDateActivatedPast">Activated</string>
    <string name="taskDateActivatedFuture">Will be actvated</string>
    <string name="taskDateExpiredPast">Expired</string>
    <string name="taskDateExpiredFuture">Expires</string>
    <string name="taskDateEstimatedCompletionTime">Estimated completion time</string>
    <string name="taskViewParents">View parent tasks</string>
    <string name="taskViewChildren">View child tasks</string>
    <string name="taskViewDetails">View details</string>
    <string name="taskEditName">Name</string>
    <string name="taskEditDetails">Details</string>
    <string name="taskEditStatus">Status</string>
    <string name="taskEditPriorityPrompt">Priority</string>
    <string name="taskEditProgress">Progress</string>
    <string name="taskEditActivationText">Activation Time</string>
    <string name="taskEditExpirationText">Expiration Time</string>
    <string name="taskEditDurationText">Estimated Completion Time</string>
    <string name="taskSortName">Name</string>
    <string name="taskSortPriority">Priority</string>
    <string name="taskSortProgress">Progress</string>
    <string name="taskSortCompletionTime">Completion Time</string>
    <string name="taskSortAdditionDate">Date Added</string>
    <string name="taskSortModificationDate">Date Modified</string>
    <string name="taskSortActivationDate">Date Activated</string>
    <string name="taskSortExpirationDate">Date Expired</string>
    <string name="taskEditCreate">Save Task</string>
    <string name="taskEditTags">Tags: </string>
    <string name="userAuthLoading">Authenticating...</string>
    <string name="loadingGeneric">Loading...</string>
    <string name="and">and</string>
    <string name="ago">ago</string>
    <string name="fromNow">from now</string>
    <string name="now">now</string>
    <string name="yesterday">yesterday</string>
    <string name="tomorrow">tomorrow</string>
    <plurals name="millenia">
        <item quantity="one">one millenium</item>
        <item quantity="other">%d millenia</item>
    </plurals>
    <plurals name="centuries">
        <item quantity="one">one century</item>
        <item quantity="other">%d centuries</item>
    </plurals>
    <plurals name="decades">
        <item quantity="one">one decade</item>
        <item quantity="other">%d decades</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">one year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">one month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">one day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">one hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">one minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">one second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <color name="progress_start">#80ffd300</color>
    <color name="progress_end">#a0ffcb00</color>
    <string-array name="priorities">
        <item>None</item>
        <item>Lowest</item>
        <item>Very Low</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item><item>Very High</item><item>Highest</item>
    </string-array>
</resources>
