<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:titleCondensed="@string/taskDescriptionMenuEditCondensed"
        android:icon="@android:drawable/ic_menu_edit"
        android:id="@+id/taskDescriptionMenuEdit"
        android:title="@string/taskDescriptionMenuEdit"></item>
    <item
        android:icon="@drawable/ic_menu_refresh"
        android:id="@+id/taskDescriptionMenuRefresh"
        android:title="@string/taskDescriptionMenuRefresh"
        android:titleCondensed="@string/taskDescriptionMenuRefreshCondensed"></item>
    <item
        android:titleCondensed="@string/taskDescriptionMenuDeleteCondensed"
        android:icon="@android:drawable/ic_menu_delete"
        android:id="@+id/taskDescriptionMenuDelete"
        android:title="@string/taskDescriptionMenuDelete"></item>
</menu>
