<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/authBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/authBannerLogIn"
        android:textSize="22dp"
        android:typeface="sans"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center" />
    <TextView android:text="User URI" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText
        android:id="@+id/authUserLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:inputType="textUri"
        android:singleLine="true"
        android:hint="@string/authUserLinkHint" />
    <TextView android:text="Username" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText
        android:id="@+id/authUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:hint="@string/authUserNameHint" />
    <TextView android:text="Password" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <EditText
        android:id="@+id/authPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:password="true"
        android:singleLine="true"
        android:hint="@string/authPasswordHint" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView
            android:id="@+id/authCreateLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="left"
            android:text="@string/authCreateLink" />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="18dp"
            android:singleLine="true"
            android:text="@string/authLoginButtonText"
            android:id="@+id/authLogin"
            android:layout_weight="3"
            android:layout_gravity="right"
            android:padding="12dp"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>