<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/taskEditName" />
        <EditText
            android:id="@+id/taskEditName"
            android:hint="@string/taskEditName"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="6dip"
            android:text="@string/taskEditStatus" />
        <EditText
            android:id="@+id/taskEditStatus"
            android:hint="@string/taskEditStatus"
            android:layout_width="match_parent"
            android:singleLine="false"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="6dip"
            android:text="@string/taskEditDetails" />
        <EditText
            android:id="@+id/taskEditDetails"
            android:hint="@string/taskEditDetails"
            android:layout_width="match_parent"
            android:singleLine="false"
            android:inputType="textCapSentences"
            android:layout_height="wrap_content" />
            
            
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:paddingTop="10dp" />
            
            
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/taskEditPriorityPrompt" />
        <Spinner
            android:id="@+id/taskEditPrioritySelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/taskEditPriorityPrompt"
            android:entries="@array/priorities" />
            
            
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:paddingTop="10dp" />
            
            
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/taskEditProgress" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <SeekBar android:layout_weight="1" android:max="100" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:id="@+id/taskEditProgress" android:layout_width="match_parent"></SeekBar>
            <EditText
                android:id="@+id/taskEditProgressValue"
                android:layout_width="wrap_content"
                android:minEms="3"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:singleLine="true"
                android:gravity="center"
                android:inputType="number" />
        </LinearLayout>
        
        
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:padding="3dp"
            android:paddingTop="20dp" />
            

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/taskEditActivationText" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/taskEditActivationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/taskEditActivationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:textStyle="bold"
            android:text="@string/taskEditExpirationText" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/taskEditExpirationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/taskEditExpirationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:textStyle="bold"
            android:text="@string/taskEditDurationText" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/taskEditDurationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/taskEditDurationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        
        
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="3dp"
            android:paddingTop="10dp" />
            
            
        <MultiAutoCompleteTextView
            android:id="@+id/taskEditTags"
            android:hint="@string/taskEditTags"
            android:completionThreshold="2"
            android:maxLines="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            
            
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:src="@android:drawable/divider_horizontal_bright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:paddingBottom="6dp"
            android:paddingTop="10dp" />
            
            
        <Button
            android:id="@+id/taskEditComplete"
            android:text="@string/taskEditCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
